adição de botões

--- a/style.css
+++ b/style.css
@@ -85,6 +85,11 @@ body{
     margin: 0 auto;
 }
 
+.parametro-senha-botoes{
+    display:flex;
+    justify-content: center;
+}
+
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
         flex-direction: row;
