--- a/style.css
+++ b/style.css
@@ -90,6 +90,23 @@ body{
     justify-content: center;
 }
 
+.parametro-senha__botao{
+    background-color:var(--fundo-texto);
+    color:var(--branco);
+    border: 2px solid var(--borda);
+    padding: 24px;
+    font-size: 24px;
+    cursor: pointer;
+}
+.parametro-senha__texto{
+    padding: 24px;
+    font-size: 24px;
+    border-top: 2px solid var(--borda);
+    border-bottom: 2px solid var(--borda);
+    margin: 0;
+
+}
+
 @media screen and (min-width: 768px) {
     .parametro-coluna__senha{
         flex-direction: row;
